--- a/src/index.css
+++ b/src/index.css
@@ -1,138 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600');
-
-* {
-  border: 0;
-  box-sizing: border-box;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  outline: 0;
-  text-decoration: none;
-}
-
-:root {
-  --color-bg: #1f1f38;
-  --color-bg-variant: #2c2c6c;
-  --color-light: rgba(255, 255, 255, 0.6);
-  --color-primary: #4db5ff;
-  --color-primary-variant: rgba(77, 181, 255, 0.4);
-  --color-black: rgba(255, 255, 255, 0.6);
-  --color-white: #fff;
-
-  --transition: all 400ms ease;
-
-  --container-width-lg: 75%;
-  --container-width-md: 86%;
-  --container-width-ms: 90%;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
---webkit-scrollbar {
-  display: none;
-}
-
 body {
-  background-color: var(--color-bg);
-  background-image: url(./assets/bg-texture.png);
-  color: var(--color-white);
-  font-family: 'Poppins', sans-serif;
-  line-height: 1.7;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  /* background-color: linear-gradient(90.21deg, #031928 -5.91%, #0D426C 111.58%); */
 }
 
-/* =============== GENERAL STYLES =============== */
-
-.container {
-  width: var(--container-width-lg);
-  margin: 0 auto;
-}
-
-h1, h2, h3, h4, h5 {
-  font-weight: 500;
-}
-
-h1 {
-  font-size: 2.5rem;
-}
-
-section {
-  margin-top: 8rem;
-  height: 100vh;
-}
-
-section > h2, section > h5 {
-  text-align: center;
-  color: var(--color-primary);
-}
-
-section > h2 {
-  color: var(--color-primary);
-  margin-top: 3rem;
-}
-
-.text-light {
-  color: var(--color-light);
-}
-
-a {
-  color: var(--color-primary);
-  transition: var(--transition);
-}
-
-a:hover {
-  color: var(--color-white);
-}
-
-.btn {
-  border: 1px solid var(--color-primary);
-  border-radius: 0.4rem;
-  color: var(--color-primary);
-  cursor: pointer;
-  display: inline-block;
-  padding: 0.75rem 1.2rem;
-  transition: var(--transition);
-  width: max-content;
-}
-
-.btn:hover {
-  background: var(--color-white);
-  color: var(--color-bg);
-  border-color: transparent;
-}
-
-.btn-primary {
-  background: var(--color-primary);
-  color: var(--color-bg);
-}
-
-img {
-  display: block;
-  object-fit: cover;
-  width: 100%;
-}
-
-/* =============== MEDIA QUERIES (MEDIUM DEVICES =============== */
-
-@media screen and (max-width: 1024px) {
-  .container {
-    width: var(--container-width-md);
-  }
-
-  section {
-    margin-top: 6rem;
-  }
-}
-
-/* =============== MEDIA QUERIES (SMALL DEVICES =============== */
-
-@media screen and (max-width: 600px) {
-  .container {
-    width: var(--container-width-sm);
-  }
-
-  section > h2 {
-    margin-bottom: 2rem;
-  }
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
