--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -19,14 +19,14 @@
   width: 56%;
 }
 .project .nav.nav-pills {
-  width: 72%;
+  width: 90%;
   margin: 0 auto;
   border-radius: 50px;
   background-color: rgb(255 255 255 / 10%);
   overflow: hidden;
 }
 .project .nav.nav-pills .nav-item {
-  width: 25%;
+  width: 20%;
 }
 .project .nav.nav-pills .nav-item:hover {
   background: linear-gradient(90.21deg, #031928 -5.91%, #0D426C 111.58%);
@@ -78,6 +78,10 @@
 }
 .nav-link#projects-tabs-tab-fourth {
   border: 1px solid rgba(255, 255, 255, 0.5);
+  /* border-radius: 0 55px 55px 0; */
+}
+.nav-link#projects-tabs-tab-fifth {
+  border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0 55px 55px 0;
 }
 .project-icons {
@@ -100,6 +104,9 @@
     font-size: 0.67rem;
   }
   .nav-link#projects-tabs-tab-fourth {
+    font-size: 0.67rem;
+	}
+  .nav-link#projects-tabs-tab-fifth {
     font-size: 0.67rem;
 	}
   .proj-txtx h4 {
